# CUBIX

./: IsValidPassword.html  IsValidPassword.py  LinterCheck.py  README.md  blackboxtest.py  requirements.txt  selenium_test.py  test.html  triangle_calculation.py  whiteboxtest.py
IsValidPassword/: IsValidPassword.py  README.rst  pyproject.toml
IsValidPassword/documentation/: IsValidPassword.html  README.md
IsValidPassword/isvalidpassword/: IsValidPassword.py
IsValidPassword/release_notes/: 0.1.0.txt
IsValidPassword/tests/: test_isvalidpassword.py
IsValidPasswordWeb/: Dockerfile  IsValidPasswordWeb.py  requirements.txt
Tests and others/: blackboxtest.py  selenium_test.py  whiteboxtest.py
