[tool.poetry]
name = "IsValidPassword"
version = "0.1.0"
description = "A replica of the Password Game for learning purposes."
authors = ["KatonaMihaly <katona0607@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
